Revision history for Perl extension Promise::XS:

0.10
- BUG FIX: Fix clear_unhandled_rejection() to work again.
- Create all() and race() methods in Promise::XS::Promise.
- finally() now creates its own internal result that has to be caught,
  or else an uncaught-rejection warning displays. The goal here is to
  match ES6’s behavior.
- Resolve a few inconsequential compiler warnings.

0.09 Fri 6 Mar 2020
- Fix uninitialized pointer.

0.08 Mon 24 Feb 2020
- BREAKING CHANGE (minor): finally() is now closer to ECMAScript’s
  specification. Toward that end, finally() callbacks no longer receive
  arguments, and they handle exceptions and returned rejected promises as
  ECMAScript’s finally() callbacks handle them.
- A warning is now thrown if a promise is the first of multiple returns from
  a promise callback.
- Speed up memory-leak detection on promise creation.

0.07 Tue 11 Feb 2020
- Support old event loop versions that lack zero-timer methods.
- Report event loop versions in distribution tests.

0.06 Thu 6 Feb 2020
- Fix compilation on some old thread-multi perls.

0.05 Sat 1 Feb 2020
- Test fixes.

0.04 Fri Jan 31 2020
- Trivial documentation fix.

0.03 Mon Jan 6 2020
- Optimize all() and race() by reducing number of Perl callbacks.
- Fix C99 dependency.
- Specify disabled prototypes in XS.
- Skip failing test in Win32. (Fix maybe forthcoming … ?)
- Attempt to support ithreads. (Thank you, RANDIR!)
- Update documentation to include caveats about Windows & threads.
- Add GitHub data to Makefile.PL.

0.02 Mon Dec 30 2019
- Make then(), catch(), and finally() create objects in the same class
  as the context object. Add documentation about subclassing.

0.01 Sun Dec 29 2019
- Initial release